# opc_collector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src_c/core/: CMakeLists.txt  multithreading.c  multithreading.h  tests_core_multithreading.cc  tests_server_base.cpp
src_c/core/device/: controller.c  controller.h  function.c  function.h  monitoring.c  monitoring.h  tests_core_device.cc
src_c/core/types/: basic_types.c  basic_types.h  tests_core_basic_types.cc
src_c/default/: CMakeLists.txt  default_server.c  default_server.h  default_server_entry.c
src_c/tests_base/: CMakeLists.txt  tests_base.cpp  tests_base.hxx
